--- a/Database/mysite/myapp/templates/Details.html
+++ b/Database/mysite/myapp/templates/Details.html
@@ -95,6 +95,7 @@ async function renderDetails(){
     //Linking the generated HTML file to <main>
     const DetailsPage = document.getElementById('Details');
     //initalizing information
+    const count = 0;
     const artistData = await fetchArtistInfo();
     const concertData = await fetchConcertInfo();
 
