--- a/Database/mysite/myapp/templates/search-form.html
+++ b/Database/mysite/myapp/templates/search-form.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'CSS/Style.css' %}">
-    <script src="javaScript/cart.js" defer></script>
+    <script src="{% static 'javaScript/cart.js' %}" defer></script>
     <title>Search Form</title>
 </head>
 
@@ -33,13 +33,13 @@
     <!--function to send back to home page when X clicked on search-->
     <!-- Goes to nothing as there isnt anything to query-->
     <main>
-        <form action="{% url 'search-results'%}" method="get">
+        <form action="{% url 'search-results' %}" method="get">
             <label for="searchQuery">Search:</label>
             <input type="text" id="searchQuery" name="q" required>
             <button type="submit">Search</button>
             <button type="button" onclick="goBackToHome()">X</button>
         </form>
-    </main>
+    </main>    
     <script>
         function goBackToHome() {
             window.location.href = "{% url 'home'%}";
