--- a/Database/mysite/myapp/templates/userPage.html
+++ b/Database/mysite/myapp/templates/userPage.html
@@ -103,13 +103,27 @@
                         <input id = "paymentPostalCode" type="text" value="V1V 1V7" class="input" v-model="payment.postalCode">
                     </div>
                 </div>
-                <button class="btn">Update</button>
 
-
+<a href="{% url 'admin_page' %}">
+                            <button class="btn">Go to Admin Page</button>
+                        </a>
+                {% if user.is_authenticated %}
+                    {% if user.client.isValid %}
+                        
+                    {% endif %}
+                {% endif %}
+              
+              
+             <!--   <a href="{% url 'admin_page' %}">
+                <button class="btn">Go to Admin Page</button> </a>
+            
+            
+                <button class="btn">Update</button> -->
+             
                 
             </div>
         </div>
-        
+   
     </div>
 
     <script>
@@ -181,6 +195,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="javaScript/userPage.js"></script>
 <script src="unit_testing/userPageTesting.js"></script>
+
+
 </body>
 
     
